--- a/tp3.tex
+++ b/tp3.tex
@@ -207,99 +207,101 @@ inmediatamente después del depósito en el periodo.
       y_{[n]} &= D\{x_{[n]}\} + D^2\{\frac{1}{2} x_{[n]} - \frac{1}{2} y_{[n]}\}\\
     \end{align*}
 
-    \centering
-    \begin{tikzpicture}[auto, node distance=2cm, >=Stealth, thick]
-      % Definición de estilos para los bloques y sumador
-      \tikzstyle{block} = [draw, rectangle, minimum height=1.5em, minimum width=3em]
-      \tikzstyle{sum} = [draw, circle, inner sep=1pt, minimum size=1cm, node distance=2cm]
-      \tikzstyle{connector} = [draw, fill, circle, minimum size=4pt, inner sep=0pt] % Estilo para el punto de conexión
+    \begin{center}
+      \begin{tikzpicture}[auto, node distance=2cm, >=Stealth, thick]
+        % Definición de estilos para los bloques y sumador
+        \tikzstyle{block} = [draw, rectangle, minimum height=1.5em, minimum width=3em]
+        \tikzstyle{sum} = [draw, circle, inner sep=1pt, minimum size=1cm, node distance=2cm]
+        \tikzstyle{connector} = [draw, fill, circle, minimum size=4pt, inner sep=0pt] % Estilo para el punto de conexión
 
-      % Nodes
-      \node at (0,0) [coordinate] (input){};
-      \node [coordinate, on grid, right=3cm of input] (elbowInput1){};
-      \node [block, on grid, below=1cm of elbowInput1] (signal1) {$\frac{1}{2}$};
-      \node [connector, on grid, above=1.4cm of signal1](punto2){};
-      \node [sum, on grid, below=2cm of signal1] (sum1) {$\sum$};
-      \node [block, on grid, below=2cm of sum1] (signal2) {$- \frac{1}{2}$};
-      \node [block, on grid, right=2cm  of sum1] (diferenciador1){$D$};
-      \node [coordinate, on grid, right=7cm of input] (elbowInput2){};
-      \node [block, on grid, below=1cm of elbowInput2] (signal3) {$1$};
-      \node [sum, on grid, right=2cm of diferenciador1](sum2){$\sum$};
-      \node [block, on grid, right=2cm of sum2](diferenciador2){$D$};
-      \node [coordinate, on grid, right=4cm of diferenciador2](output){};
-      \node [connector, on grid, right=1cm of diferenciador2](punto1){};
-      \node [coordinate, on grid, below=2cm of punto1](elbowOutput1){};
+        % Nodes
+        \node at (0,0) [coordinate] (input){};
+        \node [coordinate, on grid, right=3cm of input] (elbowInput1){};
+        \node [block, on grid, below=1cm of elbowInput1] (signal1) {$\frac{1}{2}$};
+        \node [connector, on grid, above=1.4cm of signal1](punto2){};
+        \node [sum, on grid, below=2cm of signal1] (sum1) {$\sum$};
+        \node [block, on grid, below=2cm of sum1] (signal2) {$- \frac{1}{2}$};
+        \node [block, on grid, right=2cm  of sum1] (diferenciador1){$D$};
+        \node [coordinate, on grid, right=7cm of input] (elbowInput2){};
+        \node [block, on grid, below=1cm of elbowInput2] (signal3) {$1$};
+        \node [sum, on grid, right=2cm of diferenciador1](sum2){$\sum$};
+        \node [block, on grid, right=2cm of sum2](diferenciador2){$D$};
+        \node [coordinate, on grid, right=4cm of diferenciador2](output){};
+        \node [connector, on grid, right=1cm of diferenciador2](punto1){};
+        \node [coordinate, on grid, below=2cm of punto1](elbowOutput1){};
 
-      % Lines
-      \draw [-] (input) -- node{$x_n(n)$} (elbowInput1);
-      \draw [->] (elbowInput1) -- (signal1);
-      \draw [-] (punto1) -- (elbowOutput1);
-      \draw [->] (elbowOutput1) -- (signal2);
-      \draw [-] (elbowInput1) -- (elbowInput2);
-      \draw [->] (signal1) -- (sum1);
-      \draw [->] (signal2) -- (sum1);
-      \draw [->] (sum1) -- (diferenciador1);
-      \draw [->] (diferenciador1) -- (sum2);
-      \draw [->] (elbowInput2) -- (signal3);
-      \draw [->] (signal3) -- (sum2);
-      \draw [->] (sum2) -- (diferenciador2);
-      \draw [->] (diferenciador2) -- node {$y_n(n)$}(output);
+        % Lines
+        \draw [-] (input) -- node{$x_n(n)$} (elbowInput1);
+        \draw [->] (elbowInput1) -- (signal1);
+        \draw [-] (punto1) -- (elbowOutput1);
+        \draw [->] (elbowOutput1) -- (signal2);
+        \draw [-] (elbowInput1) -- (elbowInput2);
+        \draw [->] (signal1) -- (sum1);
+        \draw [->] (signal2) -- (sum1);
+        \draw [->] (sum1) -- (diferenciador1);
+        \draw [->] (diferenciador1) -- (sum2);
+        \draw [->] (elbowInput2) -- (signal3);
+        \draw [->] (signal3) -- (sum2);
+        \draw [->] (sum2) -- (diferenciador2);
+        \draw [->] (diferenciador2) -- node {$y_n(n)$}(output);
 
-    \end{tikzpicture}
+      \end{tikzpicture}
+    \end{center}
 
 
   \item \fs{} Dado el sistema simulado por el diagrama de bloques a continuación, determinar la ecuación en diferencias
     que lo describe.
 
-    \centering
-    \begin{tikzpicture}[auto, node distance=2cm, >=Stealth, thick]
-      % Definición de estilos para los bloques y sumador
-      \tikzstyle{block} = [draw, rectangle, minimum height=1.5em, minimum width=3em]
-      \tikzstyle{sum} = [draw, circle, inner sep=1pt, minimum size=1cm, node distance=2cm]
-      \tikzstyle{connector} = [draw, fill, circle, minimum size=4pt, inner sep=0pt] % Estilo para el punto de conexión
+    \begin{center}
+      \begin{tikzpicture}[auto, node distance=2cm, >=Stealth, thick]
+        % Definición de estilos para los bloques y sumador
+        \tikzstyle{block} = [draw, rectangle, minimum height=1.5em, minimum width=3em]
+        \tikzstyle{sum} = [draw, circle, inner sep=1pt, minimum size=1cm, node distance=2cm]
+        \tikzstyle{connector} = [draw, fill, circle, minimum size=4pt, inner sep=0pt] % Estilo para el punto de conexión
 
-      % Nodes
-      \node at (0,0) [coordinate] (input){};
-      \node [coordinate, on grid, right=3cm of input] (elbowInput1){};
-      \node [block, on grid, below=1cm of elbowInput1] (signal1) {$\frac{1}{2}$};
-      \node [sum, on grid, below=2cm of signal1] (sum1) {$\sum$};
-      \node [block, on grid, below=2cm of sum1] (signal2) {$-3$};
-      \node [coordinate, on grid, below=1cm of signal2](elbowOutput3){};
-      \node [block, on grid, right=2cm  of sum1] (diferenciador1){$D$};
-      \node [coordinate, on grid, right=11cm of input] (elbowInput2){};
-      \node [block, on grid, below=1cm of elbowInput2] (signal3) {$-5$};
-      \node [sum, on grid, right=2cm of diferenciador1](sum2){$\sum$};
-      \node [block, on grid, below=2cm of sum2] (signal4) {$3$};
-      \node [coordinate, on grid, below=1cm of signal4](elbowOutput2){};
-      \node [block, on grid, right=2cm of sum2](diferenciador2){$D$};
-      \node [sum, on grid, right=2cm of diferenciador2](sum3){$\sum$};
-      \node [coordinate, on grid, right=3cm of sum3](output){};
-      \node [connector, on grid, right=1cm of sum3](punto1){};
-      \node [coordinate, on grid, below=3cm of punto1](elbowOutput1){};
-      \node [connector, on grid, below=3cm of sum2](nodo1){};
-      \node [connector, on grid, above=3.4cm of sum1](nodo1){};
+        % Nodes
+        \node at (0,0) [coordinate] (input){};
+        \node [coordinate, on grid, right=3cm of input] (elbowInput1){};
+        \node [block, on grid, below=1cm of elbowInput1] (signal1) {$\frac{1}{2}$};
+        \node [sum, on grid, below=2cm of signal1] (sum1) {$\sum$};
+        \node [block, on grid, below=2cm of sum1] (signal2) {$-3$};
+        \node [coordinate, on grid, below=1cm of signal2](elbowOutput3){};
+        \node [block, on grid, right=2cm  of sum1] (diferenciador1){$D$};
+        \node [coordinate, on grid, right=11cm of input] (elbowInput2){};
+        \node [block, on grid, below=1cm of elbowInput2] (signal3) {$-5$};
+        \node [sum, on grid, right=2cm of diferenciador1](sum2){$\sum$};
+        \node [block, on grid, below=2cm of sum2] (signal4) {$3$};
+        \node [coordinate, on grid, below=1cm of signal4](elbowOutput2){};
+        \node [block, on grid, right=2cm of sum2](diferenciador2){$D$};
+        \node [sum, on grid, right=2cm of diferenciador2](sum3){$\sum$};
+        \node [coordinate, on grid, right=3cm of sum3](output){};
+        \node [connector, on grid, right=1cm of sum3](punto1){};
+        \node [coordinate, on grid, below=3cm of punto1](elbowOutput1){};
+        \node [connector, on grid, below=3cm of sum2](nodo1){};
+        \node [connector, on grid, above=3.4cm of sum1](nodo1){};
 
-      % Lines
-      \draw [-] (input) -- node{$x_n(n)$} (elbowInput1);
-      \draw [->] (elbowInput1) -- (signal1);
-      \draw [-] (punto1) -- (elbowOutput1);
-      \draw [-] (elbowOutput1) -- (elbowOutput2);
-      \draw [-] (elbowOutput1) -- (elbowOutput3);
-      \draw [->] (elbowOutput3) -- (signal2);
-      \draw [->] (elbowOutput2) -- (signal4);
-      \draw [-] (elbowInput1) -- (elbowInput2);
-      \draw [->] (signal1) -- (sum1);
-      \draw [->] (signal2) -- (sum1);
-      \draw [->] (sum1) -- (diferenciador1);
-      \draw [->] (diferenciador1) -- (sum2);
-      \draw [->] (signal4) -- (sum2);
-      \draw [->] (elbowInput2) -- (signal3);
-      \draw [->] (sum2) -- (diferenciador2);
-      \draw [->] (signal3) -- (sum3);
-      \draw [->] (diferenciador2) -- (sum3);
-      \draw [->] (sum3) -- node {$y_n(n)$}(output);
+        % Lines
+        \draw [-] (input) -- node{$x_n(n)$} (elbowInput1);
+        \draw [->] (elbowInput1) -- (signal1);
+        \draw [-] (punto1) -- (elbowOutput1);
+        \draw [-] (elbowOutput1) -- (elbowOutput2);
+        \draw [-] (elbowOutput1) -- (elbowOutput3);
+        \draw [->] (elbowOutput3) -- (signal2);
+        \draw [->] (elbowOutput2) -- (signal4);
+        \draw [-] (elbowInput1) -- (elbowInput2);
+        \draw [->] (signal1) -- (sum1);
+        \draw [->] (signal2) -- (sum1);
+        \draw [->] (sum1) -- (diferenciador1);
+        \draw [->] (diferenciador1) -- (sum2);
+        \draw [->] (signal4) -- (sum2);
+        \draw [->] (elbowInput2) -- (signal3);
+        \draw [->] (sum2) -- (diferenciador2);
+        \draw [->] (signal3) -- (sum3);
+        \draw [->] (diferenciador2) -- (sum3);
+        \draw [->] (sum3) -- node {$y_n(n)$}(output);
 
-    \end{tikzpicture}
+      \end{tikzpicture}
+    \end{center}
 
     \begin{align*}
       y_{[n]} &= -5y_{[n]} + D\{3y_{[n]}\} + D^2\{ \frac{1}{2}x_{[n]} - 3y_{[n]}\}\\
