--- a/tp3.tex
+++ b/tp3.tex
@@ -300,15 +300,17 @@ Considerar el siguiente sistema de tiempo discreto:
     Aplicando la serie trigonometrica (\ref{s.geometrica}) y la serie de una constante, se obtiene el siguiente
     resultado:
 
-    \begin{equation*}
-      h[n] = -3^{-n} \left(2\left(1 - \left(\frac{3}{2}\right)^{n+1} \right) + (n+1)\right) \mu[n]
-    \end{equation*}
+    \begin{align*}
+      h[n] &= -3^{-n} \left(2\left(1 - \left(\frac{3}{2}\right)^{n+1} \right) + (n+1)\right) \mu[n]\\[6pt]
+      h[n] &= \left(-2 \cdot 3^{-n} + 2 \cdot 3^{-n} \cdot \left(\frac{3}{2}\right)^{n+1} -
+        n \cdot 3^{-n} - 3^{-n}\right)\mu[n]
+    \end{align*}
 
     La respuesta al escalón unitario esta definida por:
     \begin{align*}
       y[n] &= \mu[n] * h[n]\\[6pt]
-      y[n] &= \sum_{k \in \mathbb{Z}} \left(-2 \cdot 3^{-k} + 2 \cdot 3^{-n} \cdot \left(\frac{3}{2}\right)^{n+1} -
-        n \cdot 3^{-n} - 3^{-n}\right)\mu[k] \cdot \mu[n-k]\\[6pt]
+      y[n] &= \sum_{k \in \mathbb{Z}} \left(-2 \cdot 3^{-k} + 2 \cdot 3^{-k} \cdot \left(\frac{3}{2}\right)^{k+1} -
+        k \cdot 3^{-k} - 3^{-k}\right)\mu[k] \cdot \mu[n-k]\\[6pt]
         y[n] &= \mu[n] \sum_{k=0}^n \left(-2 \cdot 3^{-k} + 2 \cdot 3^{-n} \cdot \left(\frac{3}{2}\right)^{n+1} -
         n \cdot 3^{-n} - 3^{-n}\right)
     \end{align*}
