--- a/tp3.tex
+++ b/tp3.tex
@@ -8,6 +8,13 @@
 \usepackage{tikz}
 \usetikzlibrary{arrows.meta, positioning} %para hacer diagramas de bloques
 
+\usepackage{amsmath}%para entornos de alineacion
+\usepackage{amsfonts}%para las letras lindas de matematica
+\setlength{\jot}{8pt}%modifica el interlineado
+
+\usepackage{tikz} %Libreria para graficos
+\usetikzlibrary{calc, arrows.meta, positioning}
+
 \usepackage[a4paper, %margenes de pagina
   left=2.5cm,
   right=2.5cm,
@@ -36,6 +43,7 @@
 \patchcmd{\chapter}{\thispagestyle{plain}}{\thispagestyle{fancy}}{}{} %Muestra encabezado en las paginas con \chapter
 \makeatother
 
+%Comandos de fake section y fake sub section, para poder agregar secciones al indice
 \newcommand{\fs}[1]{%
   \par\refstepcounter{section}% Increase section counter
   \sectionmark{#1}% Add section mark (header)
@@ -163,19 +171,170 @@ tiempo continuo utilizado para la representación gráfica.
 
 \chapter{Ejercicio 2}
 Considerar el siguiente sistema de tiempo discreto:
-%Graficar sistema
+
+\begin{figure}[h]
+  \centering
+  \begin{tikzpicture}[auto, node distance=2cm, >=Stealth, thick]
+    % Definición de estilos para los bloques y el sumador
+    \tikzstyle{block} = [draw, rectangle, minimum height=1.5em, minimum width=3em]
+    \tikzstyle{sum} = [draw, circle, inner sep=1pt, minimum size=0.7cm, node distance=2cm]
+    \tikzstyle{connector} = [fill, circle, minimum size=4pt, inner sep=0pt] % Estilo para el punto de conexión
+
+    % Definición de nodos
+    \node at (0,-3) [coordinate] (input) {}; % Nodo de entrada x(n)
+    \node [connector, right=2cm of input] (c1) {};
+    \node [block, right=1cm of c1, yshift=1.5cm] (h1) {$h_1[n]$};
+    \node [block, right=1cm of h1] (h2) {$h_2[n]$};
+    \node [sum, right=0.5cm of h2, yshift=-1.45cm] (sumador) {$\Sigma$}; % Nodo del sumador
+    \node [block, right=1cm of sumador] (h3) {$h_3[n]$}; % Bloque h3
+    \node [coordinate, right=2cm of h3] (output) {}; % Nodo de salida y(n)
+    \node [block, below=1cm of c1, xshift=2.8cm] (h4) {$h_4[n]$}; % Nodo de h4, en paralelo
+
+    \draw[->] (input) -- node{$x[n]$}(c1);
+    \draw[->] (c1) |- (h1);
+    \draw[->] (h1) -- (h2);
+    \draw[->] (h2) -| node [left, pos=0.9] {$+$} (sumador);
+    \draw[->] (sumador) -- (h3);
+    \draw[->] (h3) -- node {$y[n]$} (output);
+    \draw[->] (c1) |- (h4); % Conexi+n del input hacia h4
+    \draw[->] (h4) -| node[pos=0.9] {$-$} (sumador); % Conexión desde h4 hacia el sumador con signo negativo
+
+  \end{tikzpicture}
+\end{figure}
 
 \begin{enumerate}[label=\alph*), left=0pt]
 
   \item\fs{} Si $h_1[n] = h_2[n] = 3^{-n}\mu[n]$, $h_3[n] = \mu[n]$, $h_4[n] = 2^{-n}\mu[n]$:
 
-    Calcular la respuesta al impulso del sistema. \\
-    Calcular la respuesta del sistema al escalón unitario.
+    La respuesta al impulso del sistema corresponde a:
+    \begin{align*}
+      h[n]&=(h_1[n]*h_2[n] - h_4[n])*h_3[n]\\
+      h[n]&=(3^{-n}\mu[n]*3^{-n}\mu[n] - 2^{-n}\mu[n])*\mu[n]\\
+      h[n]&=(3^{-n}(n-1)\mu[n] - 2^{-n}\mu[n])*\mu[n] \\
+      h[n]&=3^{-n}n\mu[n]*\mu[n] - 3^{-n}\mu[n]*\mu[n] - 2^{-n}\mu[n]*\mu[n]\\
+      h[n]&=\sum_{k=0}^n 3^{-k}k - \sum_{k=0}^n 3^{-k} - \sum_{k=0}^n 2^{-k}
+    \end{align*}
+
+    La serie geometrica:
+    \begin{equation}
+      \label{s.geometrica}
+      \sum_{k=0}^{n} r^k = \frac{1-r^{n+1}}{1-r}
+    \end{equation}
+    Va a ayudarnos a resolver la segunda y tercera sumatoria. Sin embargo, para la primera vamos a necesitar
+    manipularla.\\
+    Primero derivamos la expresión anterior respecto a r.
+    $$\sum_{k=0}^{n} kr^{k-1} = \frac{1-(n+1)r^{n} + nr^{n+1}}{(1-r)^2}$$
+    Y finalmente multiplicamos por r.
+    \begin{equation}
+      \label{s.geometrica.deriv}
+      \sum_{k=0}^{n} kr^k = \frac{r-(n+1)r^{n+1} + nr^{n+2}}{(1-r)^2}
+    \end{equation}
+    Con estos resultados, podemos continuar el desarrollo.
+
+    {
+      \allowdisplaybreaks
+      \begin{align*}
+        h[n] &= \left(\frac{\frac{1}{3}-(n+1)\left(\frac{1}{3}\right)^{n+1} + n\left(\frac{1}{3}\right)^{n+2}}{\left(1-\frac{1}{3}\right)^2} -
+          \frac{1-\left(\frac{1}{3}\right)^{n+1}}{1-\frac{1}{3}} - \frac{1-\left(\frac{1}{2}\right)^{n+1}}{1-\frac{1}{2}}\right) \mu[n]\\
+        %
+        h[n] &= \left(-\frac{11}{4}-\frac{9}{4}(n+1)\left(\frac{1}{3}\right)^{n+1} + \frac{9}{4}n\left(\frac{1}{3}\right)^{n+2} -
+        \frac{3}{2} \left(\frac{1}{3} \right)^{n+1} - 2 \left(\frac{1}{2}\right)^{n+1}\right) \mu[n] \\
+        %
+        h[n] &= \left(-\frac{11}{4} -\frac{3}{4} n 3^{-n} - \frac{3}{4} 3^{-n} +
+          \frac{1}{4}n 3^{-n} - \frac{1}{2} 3^{-n} - 2^{-n}\right) \mu[n]\\
+        %
+        h[n] &= \left(-\frac{11}{4} - 2^{-n} - \frac{2}{4} n 3^{-n} - \frac{5}{4} 3^{-n}\right) \mu[n]
+      \end{align*}
+    }
+
+    La respuesta al escalon unitario esta definida por:
+    \begin{align*}
+      y[n] &= \mu[n] * h[n]\\[6pt]
+      %
+      y[n] &= \sum_{k \in \mathbb{Z}} \left(-\frac{11}{4} - 2^{-n} - \frac{2}{4} n 3^{-n} - \frac{5}{4} 3^{-n}\right) \mu[k] \mu[n-k]\\
+      %
+      y[n] &= \mu[n] \sum_{k=0}^n \left(-\frac{11}{4} - 2^{-n} - \frac{2}{4} n 3^{-n} - \frac{5}{4} 3^{-n}\right)
+    \end{align*}
+
+    % desarrollo pambi
+    %\begin{align*}
+    %  y[n] &= \mu[n] * h[n]\\[6pt]
+    %  y[n] &= \sum_{k \in \mathbb{Z}} \left(-\frac{11}{4} - \frac{5k}{4 \cdot 3^k} + \frac{9k}{4 \cdot 3^{(k+1)}} -
+    %    \frac{9}{4 \cdot 3^{(k+1)}} + \frac{3}{2 \cdot 3^{(k+1)}} + \frac{2}{2^{(k+1)}} \right) \cdot \mu[k] \cdot \mu[n-k]\\[6pt]
+    %  y[n] &= \mu[n] \cdot \sum_{k=0}^{n} \left(-\frac{11}{4} - \frac{5k}{4 \cdot 3^k} + \frac{9k}{4 \cdot 3 \cdot 3^k} -
+    %    \frac{9}{4 \cdot 3 \cdot 3^k} + \frac{3}{2 \cdot 3 \cdot 3^k} + \frac{2}{2 \cdot 2^k} \right)\\[6pt]
+    %  y[n] &= \mu[n] \cdot \sum_{k=0}^{n} \left(-\frac{11}{4} - \frac{5k}{4 \cdot 3^k} + \frac{3k}{4 \cdot 3^k} -
+    %    \frac{3}{4 \cdot 3^k} + \frac{1}{2 \cdot 3^k} + \frac{1}{2^k}\right)
+    %\end{align*}
+
+    El desarrollo, ademas de largo, es engorroso y carece de la aplicacion de alguna propiedad importante o identidad
+    no vista. Todos los terminos de la suma usan o la identidad de la serie trigonometrica (\ref{s.geometrica}), su
+    derivada (\ref{s.geometrica.deriv}), o la identidad de una sumatoria constante. Como resultado, se obtiene lo
+    siguiente:
+    \begin{equation*}
+      y[n] = \frac{5}{4} - \frac{11}{4} (n+1) + \frac{5n + 1}{8 \cdot 3^n} + \frac{3 (n+1)}{8 \cdot 3^n} -
+        \frac{1}{2^n}
+    \end{equation*}
+
+    \begin{figure}[H]
+      \centering
+      \begin{minipage}{0.55\textwidth}
+        \centering
+        \includegraphics[width=1\textwidth]{./images/ej2.1.png}
+        \textit{Grafica con las tres funciones discretas.}
+      \end{minipage}
+    \end{figure}
 
   \item \fs{} Si $h_1[n] = 2^{-n} u[n]$, $h_2[n] = \delta[n]$, $h_3[n] = h_4[n] = 3^{-n} u[n]$:
 
-    Calcular la respuesta al impulso del sistema. \\
-    Calcular la respuesta del sistema al escalón unitario.
+    La respuesta al impulso del sistema corresponde a:
+    {
+      \allowdisplaybreaks
+      \begin{align*}
+        h[n] &= (h_1[n] * h_2[n] - h_4[n]) * h_3[n]\\[6pt]
+        h[n] &= (2^{-n} \mu[n] * \delta[n] - 3^{-n} \mu[n]) * 3^{-n} \mu[n]\\[6pt]
+        h[n] &= (2^{-n} \mu[n] * 3^{-n} \mu[n] - 3^{-n} \mu[n] * 3^{-n} \mu[n])\\[6pt]
+        h[n] &= \sum_{k \in \mathbb{Z}} \left(2^{-k} \cdot 3^{-(n-k)} \right) \cdot \mu[k] \cdot \mu[n-k] - \sum_{k \in \mathbb{Z}} \left( 3^{-k}
+          \cdot 3^{-(n-k)} \right) \cdot \mu[k] \cdot \mu[n-k]\\
+        h[n] &= 3^{-n} \cdot \mu[n] \sum_{k = 0}^n \left(2^{-k} \cdot 3^k\right) - 3^{-n} \cdot \mu[n] \sum_{k=0}^n \left(3^{-k} \cdot 3^{k}\right)\\[6pt]
+        h[n] &= 3^{-n} \cdot \mu[n] \sum_{k = 0}^n \left(\frac{3}{2}\right)^{k} - 3^{-n} \cdot \mu[n] \sum_{k=0}^n 1
+      \end{align*}
+    }
+
+    Aplicando la serie trigonometrica (\ref{s.geometrica}) y la serie de una constante, se obtiene el siguiente
+    resultado:
+
+    \begin{align*}
+      h[n] &= -3^{-n} \left(2\left(1 - \left(\frac{3}{2}\right)^{n+1} \right) + (n+1)\right) \mu[n]\\[6pt]
+      h[n] &= \left(-2 \cdot 3^{-n} + 2 \cdot 3^{-n} \cdot \left(\frac{3}{2}\right)^{n+1} -
+        n \cdot 3^{-n} - 3^{-n}\right)\mu[n]
+    \end{align*}
+
+    La respuesta al escalón unitario esta definida por:
+    \begin{align*}
+      y[n] &= \mu[n] * h[n]\\[6pt]
+      y[n] &= \sum_{k \in \mathbb{Z}} \left(-2 \cdot 3^{-k} + 2 \cdot 3^{-k} \cdot \left(\frac{3}{2}\right)^{k+1} -
+        k \cdot 3^{-k} - 3^{-k}\right)\mu[k] \cdot \mu[n-k]\\[6pt]
+      y[n] &= \mu[n] \sum_{k=0}^n \left(-2 \cdot 3^{-k} + 2 \cdot 3^{-k} \cdot \left(\frac{3}{2}\right)^{k+1} -
+        k \cdot 3^{-k} - 3^{-k}\right)
+    \end{align*}
+
+    Nuevamente, aplicando las identidades de la serie geometrica (\ref{s.geometrica}), su derivada (\ref{s.geometrica.deriv})
+    y la serie de una constante, se obtiene que:
+    \begin{equation*}
+      y[n] = \left(-9 \frac{1-\left(\frac{1}{3}\right)^{n+1}}{2} + 6 \left(1 - \left(\frac{1}{2}\right)^{n+1}\right) -
+        \left(\frac{\frac{1}{3} - n\left(\frac{1}{3}\right)^{n} + (n-1) \left(\frac{1}{3}\right)^{n+1}}{\left(1-\frac{1}{3}\right)^{2}}+3^{-n}\cdot n\right)\right)
+    \end{equation*}
+
+    \begin{figure}[H]
+      \centering
+      \begin{minipage}{0.55\textwidth}
+        \centering
+        \includegraphics[width=1\textwidth]{./images/ej2.2.png}
+        \textit{Grafica con las tres funciones discretas.}
+      \end{minipage}
+    \end{figure}
+
 \end{enumerate}
 
 \chapter{Ejercicio 3}
