Corrección en consigna

--- a/tp3.tex
+++ b/tp3.tex
@@ -513,7 +513,7 @@ y[n] - 1.2 y[n-1] - 0.13 y[n-2] - 0.36 y[n-3] = x[n]
   \item \fs{} Obtener $h[n] = \mathcal{Z}^{-1}\{H(z)\}$.
 
   \item \fs{} Obtener la respuesta al escalón unitario con condiciones iniciales nulas, por medio de fracciones 
-    parciales $y[] = \mathcal{Z}^{-1}\{Y(z)\}$.
+    parciales $y[n] = \mathcal{Z}^{-1}\{Y(z)\}$.
 
   \item \fs{} Obtener $y[n] = \mu[n] * h[n]$, la respuesta al escalón unitario sin condiciones iniciales por medio de la
     convolución temporal.
