Referencia serie geometrica para mayor claridad

--- a/tp3.tex
+++ b/tp3.tex
@@ -266,7 +266,9 @@ inmediatamente después del depósito en el periodo.
   %Apartado d
   \item \fs{} Evaluar el saldo para un periodo de capitalización de 48 meses.
 
-    Para un periodo de capitalizacion de 48 meses, se haria $n=48$ y la ecuacion resultante quedaria:
+    Para un periodo de capitalizacion de 48 meses, se haria $n=48$ y se utilizaria la serie geometrica desarrollada en 
+    el apartado b, quedando:
+
     \begin{align*}
       y[n] &= x[n] \cdot \frac{1-r^{n+1}}{1-r}\\
       y[48] &= x[48] \cdot \frac{1-r^{48+1}}{1-r}
