Agrega parentesis para mayor claridad

--- a/tp3.tex
+++ b/tp3.tex
@@ -433,8 +433,8 @@ inmediatamente después del depósito en el periodo.
     \end{align*}
     Suponiendo un $r=1{,}1$ el saldo resultaría:
     \begin{align*}
-      y[48] &= x[48] \cdot \frac{1-1,1^{48+1}}{1-1,1}\\
-      y[48] &= 10 \cdot \frac{1-1,1^{49}}{-0,1}\\
+      y[48] &= x[48] \cdot \frac{1-(1,1)^{48+1}}{1-1,1}\\
+      y[48] &= 10 \cdot \frac{1-(1,1)^{49}}{-0,1}\\
       y[48] &= 10.571,89
     \end{align*}
 \end{enumerate}
