Mueve argumentos a los subindices

--- a/tp3.tex
+++ b/tp3.tex
@@ -355,38 +355,38 @@ inmediatamente después del depósito en el periodo.
         \node [block, right=2cm of input] (sistema) {$sistema$};
         \node [coordinate, right=2cm of sistema] (output) {}; % Nodo de salida y(n)
 
-        \draw[->] (input) -- node{$x[n]$}(sistema);
-        \draw[->] (sistema) -- node {$y[n]$} (output);
+        \draw[->] (input) -- node{$x_{[n]}$}(sistema);
+        \draw[->] (sistema) -- node {$y_{[n]}$} (output);
 
         \end{tikzpicture}
     \end{figure}
 
-    La variable de entrada seria el deposito mensual, en este caso constante, $x[n] = 10\mu_n$.
+    La variable de entrada seria el deposito mensual, en este caso constante, $x_{[n]} = 10\mu_n$.
 
-    La variable de salida seria el ahorro acumulado hasta el mes $n$, $y[n]$.
+    La variable de salida seria el ahorro acumulado hasta el mes $n$, $y_{[n]}$.
   %Apartado b
   \item \fs{} Plantear un modelo en ecuaciones de diferencias capaz de caracterizar el sistema propuesto.
 
     El modelo en ecuaciones de diferencias que se plantea es el siguiente:
 
-    $$y[n] = x[n] + r \cdot y[n-1]$$
+    $$y_{[n]} = x_{[n]} + r \cdot y_{[n-1]}$$
 
     Podemos identificar un modelo recursivo en la ecuación, desarrollando un poco más obtenemos:
     \begin{align*}
-      y[n-1] &= x[n-1] + r \cdot y[n-2]\\[6pt]
-      y[n-2] &= x[n-2] + r \cdot y[n-3]\\[6pt]
-      y[n-3] &= x[n-3] + r \cdot y[n-4]
+      y_{[n-1]} &= x_{[n-1]} + r \cdot y_{[n-2]}\\[6pt]
+      y_{[n-2]} &= x_{[n-2]} + r \cdot y_{[n-3]}\\[6pt]
+      y_{[n-3]} &= x_{[n-3]} + r \cdot y_{[n-4]}
     \end{align*}
     Que sustituyendo en las previas:
-    $$y[n] = x[n] + r \cdot (x[n-1] + r \cdot(x[n-2] + r \cdot(x[n-3] + r \cdot y[n-4])))$$
+    $$y_{[n]} = x_{[n]} + r \cdot (x_{[n-1]} + r \cdot(x_{[n-2]} + r \cdot(x_{[n-3]} + r \cdot y_{[n-4]})))$$
     Distribuyendo "r":
-      $$y[n] = x[n] + r \cdot x[n-1] + r^2 \cdot x[n-2] + r^3 \cdot x[n-3] + r^4 \cdot y[n-4]$$
+    $$y_{[n]} = x_{[n]} + r \cdot x_{[n-1]} + r^2 \cdot x_{[n-2]} + r^3 \cdot x_{[n-3]} + r^4 \cdot y_{[n-4]}$$
     Está ecuación se puede reescribir como la siguiente serie geométrica:
-    $$y(n)= \sum_{k=0}^n r^k \cdot x[n-k]$$
-    Como el factor que multiplica a r, es decir, x[n] es constante, se puede tratar como tal y la solución a la serie
+    $$y(n)= \sum_{k=0}^n r^k \cdot x_{[n-k]}$$
+    Como el factor que multiplica a r, es decir, $x_{[n]}$ es constante, se puede tratar como tal y la solución a la serie
     para un r generico es:
 
-    $$y(n)= x[n] \cdot \frac{1-r^{n+1}}{1-r}$$
+    $$y(n)= x_{[n]} \cdot \frac{1-r^{n+1}}{1-r}$$
 
   %Apartado c
   \item \fs{} Representar la ecuación en diferencias por medio de un diagrama de bloques con retardos unitarios.
@@ -402,11 +402,11 @@ inmediatamente después del depósito en el periodo.
       % Definición de nodos
       %\node at (0,0) (input) {};
       \node at (0,0) [squaredNode] (int1) {D};
-      \node [above=2cm of int1] (input) {$x[n]$};
+      \node [above=2cm of int1] (input) {$x_{[n]}$};
       \node [circleSum, right=1cm of int1] (sum1) {$\sum$};
       \node [circleNode, right=1cm of sum1] (nodo1) {};
       \node [squaredNode, above=1cm of sum1] (multi1) {10};
-      \node [right=2.3cm of sum1] (output) {$y[n]$};
+      \node [right=2.3cm of sum1] (output) {$y_{[n]}$};
       \node [squaredNode, below=0.7cm of int1] (multi2) {r};
 
       \draw [myLine] (input) -- (1.994, 2.88);
@@ -428,14 +428,14 @@ inmediatamente después del depósito en el periodo.
     el apartado b, quedando:
 
     \begin{align*}
-      y[n] &= x[n] \cdot \frac{1-r^{n+1}}{1-r}\\
-      y[48] &= x[48] \cdot \frac{1-r^{48+1}}{1-r}
+      y_{[n]} &= x_{[n]} \cdot \frac{1-r^{n+1}}{1-r}\\
+      y_{[48]} &= x_{[48]} \cdot \frac{1-r^{48+1}}{1-r}
     \end{align*}
     Suponiendo un $r=1{,}1$ el saldo resultaría:
     \begin{align*}
-      y[48] &= x[48] \cdot \frac{1-(1,1)^{48+1}}{1-1,1}\\
-      y[48] &= 10 \cdot \frac{1-(1,1)^{49}}{-0,1}\\
-      y[48] &= 10.571,89
+      y_{[48]} &= x_{[48]} \cdot \frac{1-(1,1)^{48+1}}{1-1,1}\\
+      y_{[48]} &= 10 \cdot \frac{1-(1,1)^{49}}{-0,1}\\
+      y_{[48]} &= 10.571,89
     \end{align*}
 \end{enumerate}
 
