--- a/tp3.tex
+++ b/tp3.tex
@@ -382,11 +382,11 @@ inmediatamente después del depósito en el periodo.
     Distribuyendo "r":
     $$y_{[n]} = x_{[n]} + r \cdot x_{[n-1]} + r^2 \cdot x_{[n-2]} + r^3 \cdot x_{[n-3]} + r^4 \cdot y_{[n-4]}$$
     Está ecuación se puede reescribir como la siguiente serie geométrica:
-    $$y(n)= \sum_{k=0}^n r^k \cdot x_{[n-k]}$$
+    $$y_{[n]}= \sum_{k=0}^n r^k \cdot x_{[n-k]}$$
     Como el factor que multiplica a r, es decir, $x_{[n]}$ es constante, se puede tratar como tal y la solución a la serie
     para un r generico es:
 
-    $$y(n)= x_{[n]} \cdot \frac{1-r^{n+1}}{1-r}$$
+    $$y_{[n]}= x_{[n]} \cdot \frac{1-r^{n+1}}{1-r}$$
 
   %Apartado c
   \item \fs{} Representar la ecuación en diferencias por medio de un diagrama de bloques con retardos unitarios.
