Corrige ortografia en ej1

--- a/tp3.tex
+++ b/tp3.tex
@@ -145,7 +145,7 @@ tiempo continuo utilizado para la representación gráfica.
     \]
 
     Para encontrar una funcion que pase por todos los puntos de la secuencia, como una forma de aproximar la señal en el
-    dominio temporal de la cual se obtuvo la secuencia, utilizamos el metodo de interpolación de Lagrange. Definido por:
+    dominio temporal de la cual se obtuvo la secuencia, utilizamos el método de interpolación de Lagrange. Definido por:
 
     $$f(t)= \sum_{j=0}^n f[j] \prod_{i=0,i \neq j}^{n} \frac{t - t_i}{t_k - t_i}$$
     Donde:
