--- a/tp3.tex
+++ b/tp3.tex
@@ -214,7 +214,7 @@ Considerar el siguiente sistema de tiempo discreto:
       h[n]&=\sum_{k=0}^n 3^{-k}k - \sum_{k=0}^n 3^{-k} - \sum_{k=0}^n 2^{-k}
     \end{align*}
 
-    La serie geometrica:
+    La serie geométrica:
     \begin{equation}
       \label{s.geometrica}
       \sum_{k=0}^{n} r^k = \frac{1-r^{n+1}}{1-r}
@@ -246,7 +246,7 @@ Considerar el siguiente sistema de tiempo discreto:
       \end{align*}
     }
 
-    La respuesta al escalon unitario esta definida por:
+    La respuesta al escalón unitario está definida por:
     \begin{align*}
       y[n] &= \mu[n] * h[n]\\[6pt]
       %
@@ -266,8 +266,8 @@ Considerar el siguiente sistema de tiempo discreto:
     %    \frac{3}{4 \cdot 3^k} + \frac{1}{2 \cdot 3^k} + \frac{1}{2^k}\right)
     %\end{align*}
 
-    El desarrollo, ademas de largo, es engorroso y carece de la aplicacion de alguna propiedad importante o identidad
-    no vista. Todos los terminos de la suma usan o la identidad de la serie trigonometrica (\ref{s.geometrica}), su
+    El desarrollo, ademas de largo, es engorroso y carece de la aplicación de alguna propiedad importante o identidad
+    no vista. Todos los términos de la suma usan o la identidad de la serie trigonométrica (\ref{s.geometrica}), su
     derivada (\ref{s.geometrica.deriv}), o la identidad de una sumatoria constante. Como resultado, se obtiene lo
     siguiente:
     \begin{equation*}
@@ -300,7 +300,7 @@ Considerar el siguiente sistema de tiempo discreto:
       \end{align*}
     }
 
-    Aplicando la serie trigonometrica (\ref{s.geometrica}) y la serie de una constante, se obtiene el siguiente
+    Aplicando la serie trigonométrica (\ref{s.geometrica}) y la serie de una constante, se obtiene el siguiente
     resultado:
 
     \begin{align*}
@@ -309,7 +309,7 @@ Considerar el siguiente sistema de tiempo discreto:
         n \cdot 3^{-n} - 3^{-n}\right)\mu[n]
     \end{align*}
 
-    La respuesta al escalón unitario esta definida por:
+    La respuesta al escalón unitario está definida por:
     \begin{align*}
       y[n] &= \mu[n] * h[n]\\[6pt]
       y[n] &= \sum_{k \in \mathbb{Z}} \left(-2 \cdot 3^{-k} + 2 \cdot 3^{-k} \cdot \left(\frac{3}{2}\right)^{k+1} -
@@ -318,7 +318,7 @@ Considerar el siguiente sistema de tiempo discreto:
         k \cdot 3^{-k} - 3^{-k}\right)
     \end{align*}
 
-    Nuevamente, aplicando las identidades de la serie geometrica (\ref{s.geometrica}), su derivada (\ref{s.geometrica.deriv})
+    Nuevamente, aplicando las identidades de la serie geométrica (\ref{s.geometrica}), su derivada (\ref{s.geometrica.deriv})
     y la serie de una constante, se obtiene que:
     \begin{equation*}
       y[n] = \left(-9 \frac{1-\left(\frac{1}{3}\right)^{n+1}}{2} + 6 \left(1 - \left(\frac{1}{2}\right)^{n+1}\right) -
@@ -335,6 +335,7 @@ Considerar el siguiente sistema de tiempo discreto:
     \end{figure}
 
 \end{enumerate}
+
 
 \chapter{Ejercicio 3}
 Considerar un sistema bancario de ahorro a tasa de interés mensual constante. Plantear el sistema considerando un 
