--- a/tp3.tex
+++ b/tp3.tex
@@ -538,6 +538,34 @@ Considerar un sistema LTI, causal, caracterizado por una ecuación en diferencia
   \item \fs{} Obtener la respuesta al escalón unitario con condiciones iniciales nulas, por medio de fracciones 
     parciales $y_{[n]} = \mathcal{Z}^{-1}\{Y_{(z)}\}$.
 
+    Partiendo de:
+    $$Y_{(z)}  = \frac{X_{(z)}}{(1 - 1.2 z^{-1} - 0.13 - 0.36 z^{-3})}$$
+    Y considerando que la respuesta al escalón unitario es:
+    $$X_{(z)}  = \frac{z}{z-1}$$
+    La expresión final será:
+    $$Y_{(z)}  = \frac{\frac{z}{z-1}}{(1 - 1.2 z^{-1} - 0.13 - 0.36 z^{-3})}$$
+    Multiplicando y dividiendo por $z^3$, y luego resolviendo:
+    \begin{align*}
+      Y_{(z)} &= \frac{z^4}{(z-1)(z^3 - 1.2 z^2 - 0.13 z - 0.36)}\\
+      Y_{(z)} &= \frac{z^4}{(z-1)(z-1.4584)(z+0.1292-0.4797i)(z+0.1291+0.4797i)}\\
+      Y_{(z)} &= \frac{A}{z-1} + \frac{B}{z-1.4584}+ \frac{C}{z+0.1292-0.4797i}+\frac{D}{z+0.1291+0.4797i}
+    \end{align*}
+    Resolviendo los coeficientes obtenemos:
+    \begin{align*}
+      A = -1.4493-0.020i \quad
+      B = 3.5878+0.037i \quad
+      C = 0.030 - 0.005i \quad
+      D = 0.034 + 0.006i
+    \end{align*}
+    Finalmente reemplazando en la $Y_{(z)}$, y aplicando la antitransformada:
+     $$ Y_{(z)} = 1 + \frac{-1.4493-0.020}{z+(-1)} + \frac{3.5878+0.037i}{z+(-1.4584)}+
+                \frac{0.030 - 0.005i}{z+(0.129+0.48i)}+\frac{0.034 + 0.006i}{z+(0.129-0.498i)} $$
+       $$ y_{(n)} = \delta_{(n)} + (-1.4493 - 0.020j) \cdot (-1)^n \cdot u_{(n)} +
+              (3.5878 + 0.037j) \cdot (1.4584)^n \cdot (-1)^n \cdot u_{(n)} + $$
+      $$ (0.030 - 0.005j) \cdot (0.5123)^n \cdot (\cos(1.274n) + j\sin(1.274n)) \cdot u_{(n)} +
+              (0.034 + 0.006j) \cdot (0.5123)^n \cdot (\cos(1.274n) $$
+      $$ - j\sin(1.274n)) \cdot u_{(n)} $$
+
   \item \fs{} Obtener $y_{[n]} = \mu_{[n]} * h_{[n]}$, la respuesta al escalón unitario sin condiciones iniciales por medio de la
     convolución temporal.
 
