--- a/tp3.tex
+++ b/tp3.tex
@@ -490,6 +490,7 @@ Considerar la siguiente secuencia periódica en tiempo discreto y aplicar la Ser
     
     donde:
     \begin{equation}
+      \label{s.fourier.discreta}
       a_k = \frac{1}{N} \sum_{n=0}^{N-1} x[n] \cdot e^{-j\frac{2 \pi k n}{N}}
     \end{equation}
 
@@ -512,11 +513,13 @@ Considerar la siguiente secuencia periódica en tiempo discreto y aplicar la Ser
     Teniendo la expresion de $a_k$, la obtencion de su espectro es tan simple como obtener su modulo y fase.\\
     Para el modulo, usamos la expresion:
     \begin{equation}
+      \label{modulo}
       |z| = \sqrt{Re(z)^2 + Im(z)^2}
     \end{equation}
 
     y para la fase, usamos:
     \begin{equation}
+      \label{fase}
       Arg(z) = arctan2(x, y) = 
       \begin{cases}
         \arctan\left(\frac{y}{x}\right) & x > 0 \\
@@ -554,7 +557,7 @@ Considerar la siguiente secuencia periódica en tiempo discreto y aplicar la Ser
         \includegraphics[width=1\textwidth]{./images/ej5.2.png}
         \textit{Diagrama de fases $a_k$}
       \end{minipage}
-  \end{figure}
+    \end{figure}
 
 
   \item \fs{} Obtener el espectro de frecuencias para $N = 6$:
@@ -563,7 +566,74 @@ Considerar la siguiente secuencia periódica en tiempo discreto y aplicar la Ser
     x[n] = 1 + \cos \left( \frac{\pi n}{3} \right)
     \]
 
-    %insertar imagen de la onda muesteada
+    %insertar imagen de la onda muesteada, chupala 2, la saga completa
+
+    Utilizando la ec. (\ref{s.fourier.discreta}) tenemos:
+    \[
+      a_k = \frac{1}{3} \sum_{n=0}^{3-1} \left(1 + cos\left(\frac{\pi n}{3}\right) \right) \cdot e^{-j\frac{2 \pi k n}{N}}
+    \]
+
+    Para llevar a cabo esta sumatoria, nuevamente, es recomendable expandirla termino a termino, ya que si pasamos el coseno a su
+    forma compleja, y usamos la simplificacion de la serie geometrica (\ref{s.geometrica}), todos los terminos terminan
+    valiendo cero.
+    \begin{align*}
+      a_k = \frac{1}{6} \left(2 + \frac{3}{2} e^{-j\frac{\pi k}{3}} + \frac{1}{2} e^{-j\frac{2 \pi k}{3}} + 
+        \frac{1}{2} e^{-j\frac{4 \pi k}{3}} + \frac{3}{2} e^{-j\frac{5 \pi k}{3}}\right)\\
+      a_k = \frac{1}{3} + \frac{1}{4} e^{-j\frac{\pi k}{3}} + \frac{1}{12} e^{-j\frac{2 \pi k}{3}} + 
+        \frac{1}{12} e^{-j\frac{4 \pi k}{3}} + \frac{1}{4} e^{-j\frac{5 \pi k}{3}}
+    \end{align*}
+
+    Teniendo la expresion de $a_k$, la obtencion de su espectro es tan simple como obtener su modulo (\ref{modulo}) y
+    fase (\ref{fase}).\\
+
+    \begin{figure}[H]
+      \centering
+      \noindent
+      \begin{minipage}{0.4\textwidth}
+        \centering
+        \begin{align*}
+          |a_k| =
+          \begin{cases}
+            1 &k = 6m, \hspace{1cm} m \in \mathbb{Z}\\
+            0,5 &k = 6m+1, \hspace{3mm} m \in \mathbb{Z}\\
+            0 &\text{resto}
+          \end{cases}
+        \end{align*}
+        \includegraphics[width=1\textwidth]{./images/ej5.3.png}
+        \textit{Diagrama de fases $a_k$}
+      \end{minipage}
+      \hspace{1cm}
+      \begin{minipage}{0.4\textwidth}
+        \centering
+        \begin{align*}
+          \angle a_k = Arg(a_k)\\[12pt]
+        \end{align*}
+        \includegraphics[width=1\textwidth]{./images/ej5.4.png}
+        \textit{Diagrama de fases $a_k$}
+      \end{minipage}
+    \end{figure}
+
+    Nos encontramos con la peculiaridad de que el diagrama de fases no respeta con la clausula de "periodica de periodo N".
+    Es por eso que se tomo la iniciativa de hacer una herramienta en la plataforma Desmos para ver en donde estaba el error.
+    La herramienta devolvio los siguientes graficos:
+
+    \begin{figure}[H]
+      \centering
+      \noindent
+      \begin{minipage}{0.4\textwidth}
+        \centering
+        \includegraphics[width=1\textwidth]{./images/ej5.5.png}
+        \textit{Diagrama de fases $a_k$}
+      \end{minipage}
+      \hspace{1cm}
+      \begin{minipage}{0.4\textwidth}
+        \centering
+        \includegraphics[width=1\textwidth]{./images/ej5.6.png}
+        \textit{Diagrama de fases $a_k$}
+      \end{minipage}
+    \end{figure}
+
+    No fuimos capaces de determinar donde estaba el error.
 
 \end{enumerate}
 
