Corrige error en epigrafe de imagenes

--- a/tp3.tex
+++ b/tp3.tex
@@ -546,7 +546,7 @@ Considerar la siguiente secuencia periódica en tiempo discreto y aplicar la Ser
           \end{cases}
         \end{align*}
         \includegraphics[width=1\textwidth]{./images/ej5.1.png}
-        \textit{Diagrama de fases $a_k$}
+        \textit{Diagrama de modulo $a_k$}
       \end{minipage}
       \hspace{1cm}
       \begin{minipage}{0.4\textwidth}
@@ -601,7 +601,7 @@ Considerar la siguiente secuencia periódica en tiempo discreto y aplicar la Ser
           \end{cases}
         \end{align*}
         \includegraphics[width=1\textwidth]{./images/ej5.3.png}
-        \textit{Diagrama de fases $a_k$}
+        \textit{Diagrama de modulo $a_k$}
       \end{minipage}
       \hspace{1cm}
       \begin{minipage}{0.4\textwidth}
@@ -624,7 +624,7 @@ Considerar la siguiente secuencia periódica en tiempo discreto y aplicar la Ser
       \begin{minipage}{0.4\textwidth}
         \centering
         \includegraphics[width=1\textwidth]{./images/ej5.5.png}
-        \textit{Diagrama de fases $a_k$}
+        \textit{Diagrama de modulo $a_k$}
       \end{minipage}
       \hspace{1cm}
       \begin{minipage}{0.4\textwidth}
